Add an entry in the dropdown menu to indicates if the user is online or offline

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -93,5 +93,7 @@
   "trackerType": "With a usage time tracker",
   "usagePeriodInHour": "Period in usage hour",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
-  "yes": "Yes"
+  "yes": "Yes",
+  "online": "Online",
+  "notonline": "Disconnected"
 }
