--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -93,5 +93,7 @@
   "trackerType": "Avec un tracker d'usage",
   "usagePeriodInHour": "Période en heure à l'usage",
   "yearperiod": "{year, plural, one {# année} other {# {années}}",
-  "yes": "Oui"
+  "yes": "Oui",
+  "online": "En ligne",
+  "notonline": "Hors ligne"
 }
