--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -57,6 +57,7 @@
   "month": "Période en mois",
   "monthperiod": "{month, plural, one {# mois} other {# mois}}",
   "name": "Nom",
+  "nbAction": "{nbAction, plural, =0 {synchronisé} one {# action à synchroniser} other {# actions à synchroniser}}",
   "needVerification": "doit être verifié. Vérifier vos emails.",
   "newPassword": "Nouveau mot de passe",
   "no": "Non",
@@ -94,6 +95,6 @@
   "todo": "A faire",
   "trackerType": "Avec un tracker d'usage",
   "usagePeriodInHour": "Période en heure à l'usage",
-  "yearperiod": "{year, plural, one {# année} other {# {années}}",
+  "yearperiod": "{year, plural, one {# année} other {# années}}",
   "yes": "Oui"
 }
