Add a translation for the synchronisation info

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -83,6 +83,7 @@
   "signup": "S'inscrire",
   "status": "Statut",
   "syncAction": "Synchroniser",
+  "syncInProgress": "Synchronisation en cours",
   "taskDeleteMsg": "Etes vous sure de vouloir supprimer cette tache et son historique ?",
   "taskDeleteTitle": "Suppression d'une tache",
   "taskHistoryTitle": "Historique",
