--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -83,6 +83,7 @@
   "signup": "Sign up",
   "status": "Status",
   "syncAction": "Synchronize",
+  "syncInProgress": "Synchronization in progress",
   "taskDeleteMsg": "Are you sure you want to delete this task?",
   "taskDeleteTitle": "Delete task",
   "taskHistoryTitle": "Task history",
