Add a menu item for the new About modal

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,6 @@
 {
+  "about": "About",
+  "aboutTitle": "Equipment Maintenance",
   "ack": "Acknowledge",
   "ackDate": "Realisation date",
   "age": "Equipment Age in hour",
@@ -62,6 +64,7 @@
   "newPassword": "New Password",
   "no": "No",
   "notonline": "Offline",
+  "ok": "OK",
   "online": "Online",
   "orevery": " or every ",
   "password": "Password",
