--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -101,5 +101,10 @@
   "trackerType": "Avec un tracker d'usage",
   "usagePeriodInHour": "Période en heure à l'usage",
   "yearperiod": "{year, plural, one {# année} other {# années}}",
-  "yes": "Oui"
+  "yes": "Oui",
+  "modalImageEditTitle": "Edition d'une image",
+  "imageTitle": "Titre",
+  "imageDescription": "Description",
+  "imageDeleteTitle": "Suppression d'une image",
+  "imageDeleteMessage": "Etes vous sure de vouloir supprimer cette image ?"
 }
