--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -105,7 +105,7 @@
   "todo": "To do",
   "trackerType": "With a usage time tracker",
   "usagePeriodInHour": "Period in usage hour",
+  "userExceedStorageLimit": "User exceeded the storage limit. Remove some images before adding new images.",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
-  "yes": "Yes",
-  "userExceedStorageLimit": "User exceeded the storage limit. Remove some images before adding new images."
+  "yes": "Yes"
 }
