--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -105,7 +105,7 @@
   "todo": "A faire",
   "trackerType": "Avec un tracker d'usage",
   "usagePeriodInHour": "Période en heure à l'usage",
+  "userExceedStorageLimit": "Vous avez dépassé la limite du stockage qui vous a été attribué. Veuillez supprimer des images avant d'en rajouter.",
   "yearperiod": "{year, plural, one {# année} other {# années}}",
-  "yes": "Oui",
-  "userExceedStorageLimit": "Vous avez dépassé la limite du stockage qui vous a été attribué. Veuillez supprimer des images avant d'en rajouter."
+  "yes": "Oui"
 }
