Forgot to commit some translation files

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,5 +1,6 @@
 {
   "about": "About",
+  "aboutMsg": "Made with love by Paul Torruella",
   "aboutTitle": "Equipment Maintenance",
   "ack": "Acknowledge",
   "ackDate": "Realisation date",
