--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1,5 +1,6 @@
 {
   "about": "A propos",
+  "aboutMsg": "Fait avec Amour par Paul Torruella",
   "aboutTitle": "Equipment Maintenance",
   "ack": "Acquitter",
   "ackDate": "Date de réalisation",
