--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -37,6 +37,7 @@
   "equipmentname": "Name",
   "errorFetching": "Something went wrong ...",
   "firstname": "Firstname",
+  "gallerytitle": "Gallery",
   "imageDeleteMessage": "Are you sure you want to delete this image?",
   "imageDeleteTitle": "Delete image",
   "imageDescription": "Description",
@@ -108,6 +109,5 @@
   "usagePeriodInHour": "Period in usage hour",
   "userExceedStorageLimit": "User exceeded the storage limit. Remove some images before adding new images.",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
-  "yes": "Yes",
-  "gallerytitle": "Gallery"
+  "yes": "Yes"
 }
