Change some text, remove a warning and increase the release number

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -83,12 +83,12 @@
   "save": "Sauver",
   "sendVerification": "Renvoyer la Vérification",
   "serialPort": "Port Série",
-  "shouldbedone": "Devrait être fait ",
+  "shouldbedone": "Devrait être fait le ",
   "shouldbedonein1": "Devrait être fait dans ",
-  "shouldbedonein2": " équipement ou le ",
+  "shouldbedonein2": " ou le ",
   "shouldhavebeendone": "Aurait due être fait le ",
   "shouldhavebeendonein": "Aurait due être fait il y a ",
-  "shouldhavebeendonein2": " équipement ou le ",
+  "shouldhavebeendonein2": " ou le ",
   "signout": "Déconnection",
   "signup": "S'inscrire",
   "status": "Statut",
