Change the title of the entry modal that was confusing

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -52,7 +52,7 @@
   "loginfailed": "Login failed",
   "manualEntryType": "With a manual input",
   "message": "Error message :",
-  "modalAckTitle": "Task acknowledgement",
+  "modalAckTitle": "Add an entry",
   "modalCreateTaskTitle": "Task creation",
   "modalCreationTitle": "Equipment Creation",
   "modalEditEntryTitle": "Entry edition",
