--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -52,7 +52,7 @@
   "loginfailed": "Le login a échoué",
   "manualEntryType": "En la saisissant manuellement",
   "message": "Message d'erreur :",
-  "modalAckTitle": "Acquittement d'une tache",
+  "modalAckTitle": "Ajout d'une entrée",
   "modalCreateTaskTitle": "Création d'une tache",
   "modalCreationTitle": "Création d'un équipement",
   "modalEditEntryTitle": "Edition d'une entrée",
