Add a modal to create an asset at the startup if the user does not have assets yet.

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -13,6 +13,11 @@
   "ageUrl": "URL pour récupérer l'age de l'équipment",
   "ageUrlToolTip": "Url permettant de mettre à jour le temps d'utilisation de l'équipement.",
   "alreadyexisting": "existe déjà",
+  "assetDeleteMsg": "Etes-vous sure de vouloir supprimer ce bien et tout son contenu (equipements, taches, et historique)?",
+  "assetDeleteTitle": "Suppression d'un bien",
+  "assetModalCreationTitle": "Création d'un bien",
+  "assetModalEditionTitle": "Edition d'un bien",
+  "assetName": "Nom du bien",
   "brand": "Marque",
   "cancel": "Annuler",
   "changePassword": "Confirmer le changement",
@@ -52,6 +57,7 @@
   "loginerror": "Erreur :",
   "loginfailed": "Le login a échoué",
   "manualEntryType": "En la saisissant manuellement",
+  "manufactureDateLabel": "Date de sa création",
   "message": "Message d'erreur :",
   "modalAckTitle": "Ajout d'une entrée",
   "modalCreateTaskTitle": "Création d'une tache",
