--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -13,6 +13,11 @@
   "ageUrl": "Equipment Age URL",
   "ageUrlToolTip": "Url allowing to get the equipment usage time in hour.",
   "alreadyexisting": "already exist",
+  "assetDeleteMsg": "Are you sure you want to delete this asset and all its content (equipments, tasks, entries)?",
+  "assetDeleteTitle": "Delete Asset",
+  "assetModalCreationTitle": "Asset Creation",
+  "assetModalEditionTitle": "Asset Edition",
+  "assetName": "Asset name",
   "brand": "Brand",
   "cancel": "Cancel",
   "changePassword": "Change Password",
@@ -52,6 +57,7 @@
   "loginerror": "Error:",
   "loginfailed": "Login failed",
   "manualEntryType": "With a manual input",
+  "manufactureDateLabel": "Manufacture Date",
   "message": "Error message :",
   "modalAckTitle": "Add an entry",
   "modalCreateTaskTitle": "Task creation",
