--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -116,5 +116,6 @@
   "usagePeriodInHour": "Période en heure à l'usage",
   "userExceedStorageLimit": "Vous avez dépassé la limite du stockage qui vous a été attribué. Veuillez supprimer des images avant d'en rajouter.",
   "yearperiod": "{year, plural, one {# année} other {# années}}",
-  "yes": "Oui"
+  "yes": "Oui",
+  "credentialError": "Vous n'avez pas assez de privilèges pour effectuer cette action."
 }
