--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -117,5 +117,5 @@
   "userExceedStorageLimit": "User exceeded the storage limit. Remove some images before adding new images.",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
   "yes": "Yes",
-  "credentialError": "You don't have the correct credentials to perform this action."
+  "credentialError": "You don't have enough credentials to perform this action."
 }
