--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -55,6 +55,7 @@
   "installedOn": "installed on ",
   "invalid": "is invalid",
   "isrequired": "is required",
+  "localStorageBuilderErrorOffline": "Cannot rebuild the local storage because you are offline or your connection seems too slow.",
   "login": "Login",
   "loginerror": "Error:",
   "loginfailed": "Login failed",
@@ -87,6 +88,7 @@
   "orevery": " or every ",
   "password": "Password",
   "passwordsHaveToBeIdentical": "The passwords are different. Please re-type the passwords.",
+  "rebuildLocalStorage": "Rebuild local storage",
   "remarks": "Remarks",
   "remember": "Remember me",
   "resetPassword": "Reset password",
@@ -103,6 +105,7 @@
   "signout": "Signout",
   "signup": "Sign up",
   "status": "Status",
+  "storageNotOpenedYet": "The local storage is not opened yet.",
   "syncAction": "Synchronize",
   "syncInProgress": "Synchronization in progress",
   "taskDeleteMsg": "Are you sure you want to delete this task?",
@@ -117,6 +120,7 @@
   "today": "Today, ",
   "todo": "To do",
   "trackerType": "With a usage time tracker",
+  "unexpectedError": "An unexpected error occurred. You can try again.",
   "usagePeriodInHour": "Period in usage hour",
   "userExceedStorageLimit": "User exceeded the storage limit. Remove some images before adding new images.",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
