--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -55,6 +55,7 @@
   "installedOn": "installé le ",
   "invalid": "est invalide.",
   "isrequired": "est requis",
+  "localStorageBuilderErrorOffline": "Impossible de reconstruire le stockage local parce vous êtes hors ligne ou bien votre connection est trops lente.",
   "login": "Login",
   "loginerror": "Erreur :",
   "loginfailed": "Le login a échoué",
@@ -87,6 +88,7 @@
   "orevery": " ou tous les ",
   "password": "Mot de passe",
   "passwordsHaveToBeIdentical": "Les mots de passe sont différents. Veuillez les retapper.",
+  "rebuildLocalStorage": "Reconstruit le stockage local",
   "remarks": "Remarques",
   "remember": "Se souvenir de moi",
   "resetPassword": "Mot de passe oublié",
@@ -103,6 +105,7 @@
   "signout": "Déconnection",
   "signup": "S'inscrire",
   "status": "Statut",
+  "storageNotOpenedYet": "Le stocakge local n'est pas encore ouvert.",
   "syncAction": "Synchroniser",
   "syncInProgress": "Synchronisation en cours",
   "taskDeleteMsg": "Etes vous sure de vouloir supprimer cette tache et son historique ?",
@@ -117,6 +120,7 @@
   "today": "Aujourd'hui, ",
   "todo": "A faire",
   "trackerType": "Avec un tracker d'usage",
+  "unexpectedError": "Une erreur inattendue est survenue. Vous pouvez essayer à nouveau.",
   "usagePeriodInHour": "Période en heure à l'usage",
   "userExceedStorageLimit": "Vous avez dépassé la limite du stockage qui vous a été attribué. Veuillez supprimer des images avant d'en rajouter.",
   "yearperiod": "{year, plural, one {# année} other {# années}}",
