Fix some french typo

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -106,7 +106,7 @@
   "signout": "Déconnection",
   "signup": "S'inscrire",
   "status": "Statut",
-  "storageNotOpenedYet": "Le stocakge local n'est pas encore ouvert.",
+  "storageNotOpenedYet": "Le stockage local n'est pas encore ouvert.",
   "syncAction": "Synchroniser",
   "syncInProgress": "Synchronisation en cours",
   "taskDeleteMsg": "Etes vous sure de vouloir supprimer cette tache et son historique ?",
@@ -121,7 +121,7 @@
   "today": "Aujourd'hui, ",
   "todo": "A faire",
   "trackerType": "Avec un tracker d'usage",
-  "unexpectedError": "Une erreur inattendue est survenue. Vous pouvez essayer à nouveau.",
+  "unexpectedError": "Une erreur inattendue est survenue.",
   "usagePeriodInHour": "Période en heure à l'usage",
   "userExceedStorageLimit": "Vous avez dépassé la limite du stockage qui vous a été attribué. Veuillez supprimer des images avant d'en rajouter.",
   "yearperiod": "{year, plural, one {# année} other {# années}}",
