--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -5,7 +5,7 @@
   "ack": "Acquitter",
   "ackDate": "Date de réalisation",
   "ackOption": "Acquitter la tache",
-  "actionErrorBecauseOffline": "Ne peut pas executer cette action car vous êtes hors ligne ou bien votre connection est trops lente.",
+  "actionErrorBecauseOffline": "Ne peut pas exécuter cette action car vous êtes hors ligne ou bien votre connection est trops lente.",
   "age": "Age de l'équipement en heure",
   "ageAcquisitionType": "Comment voulez-vous mesurez l'usage de cet équipement ?",
   "ageAcquisitionTypeTooltip": "L'application <b>Equipment maintenance</b> a besoin de connaître le temps d'utilisation de l'équipement afin de pouvoir alerter lorsqu'une tache doit être executée.\nIl y a 3 façons de définir le temps d'utilisation de l'equipement.\nLa façon la plus simple est d'utiliser le temps courant.\nUne autre facon est de la saisir manuellement.\nLa dernière façon est d'utiliser un traqueur d'usage qui publie le temps d'utilisation en ligne.",
@@ -89,6 +89,8 @@
   "orevery": " ou tous les ",
   "password": "Mot de passe",
   "passwordsHaveToBeIdentical": "Les mots de passe sont différents. Veuillez les retapper.",
+  "privacyPolicy": "Règles de confidentialité",
+  "privacyTitle": "Règles de confidentialité pour l'application Equipment Maintenance",
   "rebuildInProgress": "Stockage local en reconstruction ...",
   "rebuildLocalStorage": "Reconstruit le stockage local",
   "remarks": "Remarques",
