--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -128,5 +128,6 @@
   "usagePeriodInHour": "Period in usage hour",
   "userExceedStorageLimit": "User exceeded the storage limit. Remove some images before adding new images.",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
-  "yes": "Yes"
+  "yes": "Yes",
+  "loginWithGoogle": "Login with Google"
 }
