--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -91,7 +91,7 @@
   "orevery": " or every ",
   "password": "Password",
   "passwordsHaveToBeIdentical": "The passwords are different. Please re-type the passwords.",
-  "privacyPolicy": "Privacy policy",
+  "privacyPolicyMenu": "Privacy policy",
   "privacyTitle": "Privacy Policy for Equipment Maintenance",
   "rebuildInProgress": "Local storage rebuild in progress...",
   "rebuildLocalStorage": "Rebuild local storage",
