--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -91,7 +91,7 @@
   "orevery": " ou tous les ",
   "password": "Mot de passe",
   "passwordsHaveToBeIdentical": "Les mots de passe sont différents. Veuillez les retapper.",
-  "privacyPolicy": "Règles de confidentialité",
+  "privacyPolicyMenu": "Règles de confidentialité",
   "privacyTitle": "Règles de confidentialité pour l'application Equipment Maintenance",
   "rebuildInProgress": "Stockage local en reconstruction ...",
   "rebuildLocalStorage": "Reconstruit le stockage local",
