--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -130,5 +130,7 @@
   "usagePeriodInHour": "Période en heure à l'usage",
   "userExceedStorageLimit": "Vous avez dépassé la limite du stockage qui vous a été attribué. Veuillez supprimer des images avant d'en rajouter.",
   "yearperiod": "{year, plural, one {# année} other {# années}}",
-  "yes": "Oui"
+  "yes": "Oui",
+  "privacyPolicyAcceptance": "En cochant cette case, vous adhérez explicitement aux {privatePolicyLink}",
+  "privacyPolicy": "règles de confidentialité"
 }
