--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -2,6 +2,7 @@
   "about": "About",
   "aboutMsg": "Made with love by Paul Torruella",
   "aboutTitle": "Equipment Maintenance",
+  "accept": "Accept",
   "ack": "Acknowledge",
   "ackDate": "Realisation date",
   "ackOption": "Acknowledge the task",
@@ -91,6 +92,11 @@
   "orevery": " or every ",
   "password": "Password",
   "passwordsHaveToBeIdentical": "The passwords are different. Please re-type the passwords.",
+  "privacyPolicy": "privacy policy",
+  "privacyPolicyAcceptance": "By checking thix box, you expressly confirm the acceptance of our {privatePolicyLink}",
+  "privacyPolicyAcceptanceUsingAWindow1": "We use technologies, such as cookies and local storage, and we process personal data, such as IP addresses to personalize content based on your personal data and preference.",
+  "privacyPolicyAcceptanceUsingAWindow2": "It also allows us to measure the performance of the web application.",
+  "privacyPolicyAcceptanceUsingAWindow3": "Click below to consent to the use of this technology and the processing of your personal data for these purposes. You can still access the {privatePolicyLink} in the user menu.",
   "privacyPolicyMenu": "Privacy policy",
   "privacyTitle": "Privacy Policy for Equipment Maintenance",
   "rebuildInProgress": "Local storage rebuild in progress...",
@@ -130,7 +136,5 @@
   "usagePeriodInHour": "Period in usage hour",
   "userExceedStorageLimit": "User exceeded the storage limit. Remove some images before adding new images.",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
-  "yes": "Yes",
-  "privacyPolicyAcceptance": "By checking thix box, you expressly confirm the acceptance of our {privatePolicyLink}",
-  "privacyPolicy": "privacy policy"
+  "yes": "Yes"
 }
