--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -2,10 +2,11 @@
   "about": "A propos",
   "aboutMsg": "Fait avec Amour par Paul Torruella",
   "aboutTitle": "Equipment Maintenance",
+  "accept": "Accepter",
   "ack": "Acquitter",
   "ackDate": "Date de réalisation",
   "ackOption": "Acquitter la tache",
-  "actionErrorBecauseOffline": "Ne peut pas executer cette action car vous êtes hors ligne ou bien votre connection est trops lente.",
+  "actionErrorBecauseOffline": "Ne peut pas exécuter cette action car vous êtes hors ligne ou bien votre connection est trops lente.",
   "age": "Age de l'équipement en heure",
   "ageAcquisitionType": "Comment voulez-vous mesurez l'usage de cet équipement ?",
   "ageAcquisitionTypeTooltip": "L'application <b>Equipment maintenance</b> a besoin de connaître le temps d'utilisation de l'équipement afin de pouvoir alerter lorsqu'une tache doit être executée.\nIl y a 3 façons de définir le temps d'utilisation de l'equipement.\nLa façon la plus simple est d'utiliser le temps courant.\nUne autre facon est de la saisir manuellement.\nLa dernière façon est d'utiliser un traqueur d'usage qui publie le temps d'utilisation en ligne.",
@@ -58,6 +59,7 @@
   "invalid": "est invalide.",
   "isrequired": "est requis",
   "login": "Login",
+  "loginWithGoogle": "Se connecter avec Google",
   "loginerror": "Erreur :",
   "loginfailed": "Le login a échoué",
   "manualEntryType": "En la saisissant manuellement",
@@ -86,9 +88,17 @@
   "notonline": "Hors ligne",
   "ok": "OK",
   "online": "En ligne",
+  "or": "OU",
   "orevery": " ou tous les ",
   "password": "Mot de passe",
   "passwordsHaveToBeIdentical": "Les mots de passe sont différents. Veuillez les retapper.",
+  "privacyPolicy": "règles de confidentialité",
+  "privacyPolicyAcceptance": "En cochant cette case, vous adhérez explicitement aux {privatePolicyLink}",
+  "privacyPolicyAcceptanceUsingAWindow1": "Nous utilisons des technologies tel que cookies et local storage, et nous traitons vos données personnelles, tel que addresses IP, nom et email afin de personnaliser le contenu en se basant sur vos données personnelles et vos préférences.",
+  "privacyPolicyAcceptanceUsingAWindow2": "Cela nous permet aussi de mesurer les performances de l'application web.",
+  "privacyPolicyAcceptanceUsingAWindow3": "Cliquer ci-dessous pour accepter l'utilisation de ces technologies et le traitement de vos données personnelles pour ces besoins. Vous pouvez à tout moment consulter les {privatePolicyLink} dans le menu utilisateur.",
+  "privacyPolicyMenu": "Règles de confidentialité",
+  "privacyTitle": "Règles de confidentialité pour l'application Equipment Maintenance",
   "rebuildInProgress": "Stockage local en reconstruction ...",
   "rebuildLocalStorage": "Reconstruit le stockage local",
   "remarks": "Remarques",
