Add the privacy policy in french and improve the graphic design of the modal displaying the privacy policy.

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -92,13 +92,13 @@
   "orevery": " ou tous les ",
   "password": "Mot de passe",
   "passwordsHaveToBeIdentical": "Les mots de passe sont différents. Veuillez les retapper.",
-  "privacyPolicy": "règles de confidentialité",
-  "privacyPolicyAcceptance": "En cochant cette case, vous adhérez explicitement aux {privatePolicyLink}",
+  "privacyPolicy": "politique de confidentialité",
+  "privacyPolicyAcceptance": "En cochant cette case, vous adhérez explicitement à la {privatePolicyLink}",
   "privacyPolicyAcceptanceUsingAWindow1": "Nous utilisons des technologies tel que cookies et local storage, et nous traitons vos données personnelles, tel que addresses IP, nom et email afin de personnaliser le contenu en se basant sur vos données personnelles et vos préférences.",
   "privacyPolicyAcceptanceUsingAWindow2": "Cela nous permet aussi de mesurer les performances de l'application web.",
   "privacyPolicyAcceptanceUsingAWindow3": "Cliquer ci-dessous pour accepter l'utilisation de ces technologies et le traitement de vos données personnelles pour ces besoins. Vous pouvez à tout moment consulter les {privatePolicyLink} dans le menu utilisateur.",
-  "privacyPolicyMenu": "Règles de confidentialité",
-  "privacyTitle": "Règles de confidentialité pour l'application Equipment Maintenance",
+  "privacyPolicyMenu": "Politique de confidentialité",
+  "privacyTitle": "Politique de confidentialité pour l'application Equipment Maintenance",
   "rebuildInProgress": "Stockage local en reconstruction ...",
   "rebuildLocalStorage": "Reconstruit le stockage local",
   "remarks": "Remarques",
